add welcome index.html.erb

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,9 +1,12 @@
 <html>
   <head>
     <title>Frack MVC</title>
+    <link rel="stylesheet"type="text/css"href="css/style.css">
   </head>
   <body>
-    <h1>application#layout</h1>
-    <%= yield %>
+    <h1>
+      Hello word
+    </h1>
+    <%=yield%>
   </body>
 </html>
