--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,6 @@
-<h2>User page</h2>
+<h2> List Users </h2>
 <ul>
-   <% @users.each do|user| %>
-   <li><%= user %></li>
-   <% end %>
+  <% @users.each do |user| %>
+    <li><%= user.email %></li>
+  <%end%>
 </ul>
